# rust-golang-integration

./: README.md  build.sh  clean.sh  run.sh
golang-lib/: .env  build.sh  clean.sh  go.mod  go.sum  main.go
golang-lib/config/: version.go
golang-lib/handlers/: handlers.go
golang-lib/interfaces/: interfaces.go
rust-bridge/: Cargo.toml  build.rs  build.sh  clean.sh
rust-bridge/src/: lib.rs
rust-main/: Cargo.toml  build.rs  build.sh  clean.sh  run.sh  wrapper.h
rust-main/src/: bindings.rs  interfaces.rs  lib.rs
