[package]
name = "rust-golang-integration"
version = "0.1.0"
edition = "2021"
authors = ["Anton Troskie <troskie.a@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.96"
serde_repr = "0.1.12"
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1.37"
crossbeam = "0.8.2"

[build-dependencies]
bindgen = "0.65.1"
